<resources>
    <string name="app_name">TicketToRide</string>
    <string name="login_screen_title">Ticket To Ride</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin_button_text">Log in</string>
    <string name="signup_button_text">Sign up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_screen_OR">- OR -</string>
    <string name="game_name_hint">Game Name</string>
    <string name="create_game_button_text">+ Create Game</string>
    <string name="number_of_players">Number of Players:</string>
    <string name="join_game_button">Join Game</string>
    <string name="lobby_waiting_message">Game will start when enough players join...</string>
    <string name="title_activity_game">Map</string>
    <string name="text_button_claim">Claim a Route</string>
    <string name="destination_pick_title">Choose 2 or 3 Destinations</string>
    <string name="color_pick_title">Choose a Color to Claim With</string>
    <string name="choose_dest_button_text">Submit</string>
    <string name="title_fragment_stats">Players Stats</string>
    <string name="title_fragment_chat">Chat</string>
    <string name="chat_hint">Type your message here</string>
    <string name="text_button_choose_destinations">Draw Destinations</string>
    <string name="text_button_show_dest">Show Destination Cards</string>
    <string name="error_destinations_not_checked">You must select at least 2 destinations</string>
    <string name="end_place">Place</string>
    <string name="end_username">Username</string>
    <string name="end_claimed_points">Points for Claimed Routes</string>
    <string name="end_destination_points">Points for Claimed Destinations</string>
    <string name="end_lost_destination_points">Points Lost for Unclaimed Destinations</string>
    <string name="end_most_routes_points">Points for Most Routes</string>
    <string name="end_total_points">Total</string>
</resources>
