<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="125dp"
            android:gravity="center_horizontal"
            android:text="@string/login_screen_title"
            android:textColor="#fff"
            android:textSize="75sp"
            android:textStyle="bold" />

    <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="125dp"
            android:layout_centerInParent="true"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="20dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/register_username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/username_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/register_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:singleLine="true"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/register_confirm_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:singleLine="true"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="5dp"
                    android:text="@string/forgot_password" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="5">

                <Button
                        android:id="@+id/button_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:width="200dp"
                        android:background="@color/colorAccent"
                        android:text="@string/signup_button_text"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:layout_weight="2"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>