<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="20dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/game_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/game_name_hint" />
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_of_players"
                            android:layout_gravity="center"
                            android:paddingRight="20dp"/>

                    <NumberPicker
                            android:id="@+id/number_picker"
                            android:layout_width="40dp"
                            android:layout_height="58dp"/>

                </LinearLayout>


            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="5">

                <Button
                        android:id="@+id/button_create_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:width="200dp"
                        android:background="@color/colorAccent"
                        android:text="@string/create_game_button_text"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:layout_weight="2"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="800dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="20dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:id="@+id/available_games_list"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/button_join_game"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            <Button
                    android:id="@+id/button_join_game"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@color/colorAccent"
                    android:text="@string/join_game_button"
                    android:textColor="#fff"/>

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</LinearLayout>